package mycalendar.modele.droits;

public class Admin extends Droit{
}
