package mycalendar.modele.droits;

public abstract class Droit {
}
