package mycalendar.modele.droits;

public class Inviter extends Droit {
}
