package mycalendar.modele.droits;

public class Modifier extends Droit {
}
