package mycalendar.modele.droits;

public class Retirer extends Droit {
}
